--- a/client/fields.jade
+++ b/client/fields.jade
@@ -854,20 +854,20 @@ template(name='child_view')
 
 template(name='youtube_edit')
     .ui.labeled.fluid.icon.input
-        .ui.label 
+        .ui.large.basic.label 
             // if icon
             //     i.grey.icon(class=icon)
             |youtube id
         input.youtube_id(type='text' value=field_value placeholder=placeholder autocomplete="off")
     if field_value
-        iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
+        iframe.youtube_view(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
 
 template(name='youtube_view')
     if field_value
         if icon
-            i.grey.icon(class=icon)
-            //- +i name=icon
-        .ui.embed(data-source="youtube" data-id=field_value)
+            //- i.grey.icon(class=icon)
+            +i name=icon
+        .ui.embed.youtube_view(data-source="youtube" data-id=field_value)
 
         //- // iframe(width='560' height='315' src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
         //- iframe(src="https://www.youtube.com/embed/#{field_value}" frameborder='0' allow='accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture' allowfullscreen='')
@@ -912,8 +912,8 @@ template(name='boolean_edit')
         else
             i.circle.outline.icon
         //- .ui.compact.button.toggle_boolean(class=boolean_toggle_class)
-        //- if icon
-        //-     +i name=icon classes='ui middle aligned image'
+        if icon
+            +ismall name=icon classes='ui middle aligned image'
         .inline.f4
             //- if field_value
             //-     i.checkmark.icon
