--- a/components/commerce/karma.jade
+++ b/components/commerce/karma.jade
@@ -131,7 +131,7 @@ template(name='new_karma_transaction')
                         |complete
 
 
-template(name='user_karma')
+template(name='member_karma')
     .ui.header 
         +i name='yin-yang'
         |karma
