--- a/components/commerce/market.jade
+++ b/components/commerce/market.jade
@@ -17,7 +17,7 @@ template(name='market')
                 //- .ui.inline.header type
                 +market_cloud
             .twelve.wide.column.scrolling
-                .ui.tiny.grey.center.aligned.header gold run + market is community run and not affiliated or endorsed by the Gold Run Condominiums HOA
+                //- .ui.tiny.grey.center.aligned.header gold run + market is community run and not affiliated or endorsed by the Gold Run Condominiums HOA
                 //- +set_market_type label='for sale' icon='shopping bag'
                 //- +set_market_type label='free' icon='thumbs up outline'
                 //- +set_market_type label='service' icon='wrench'
