--- a/client/styles.css
+++ b/client/styles.css
@@ -51,6 +51,11 @@ body {
   text-orientation: upright;
 }
 
+.youtube_view {
+    border-radius: 10px !important;
+}
+
+
 .beer_section {
     border: 10px single black !important;
 }
@@ -126,15 +131,15 @@ body {
 /* .menu > .item:hover { */
     /* filter: drop-shadow(0px 0px 5px rgba(100,100,100,.9)) !important; */
 /* } */
-.topnav > .item:hover {
+/* .topnav > .item:hover {
     filter: drop-shadow(0px 0px 5px rgba(250,250,250,.9)) !important;
     transform: scale(1.1);
-}
-.right.menu > .item:hover {
+} */
+/* .right.menu > .item:hover {
     filter: drop-shadow(0px 0px 5px rgba(250,250,250,.9)) !important;
     /* transform: rotate(10deg) scale(1.1); */
-    transform: scale(1.1);
-}
+    /* transform: scale(1.1); */
+/* } */
 /* .menu > .item > .image:hover {
     filter: drop-shadow(0px 0px 5px rgba(250,250,250,.9)) !important;
     transform: rotate(10deg) scale(1.1);
@@ -145,7 +150,7 @@ body {
 }
 
 #topnav {
-    border-radius: 0px 0px 10px 10px !important;
+    border-radius: 0px 0px 0px 0px !important;
 }
 .grid_seg:focus-visible {
     outline: lightgreen solid 2px !important;
@@ -158,9 +163,9 @@ body {
     transition: background-color 3s ease !important;
 }
 
-#topnav > .item {
+/* #topnav > .item {
     transition: all .25s ease !important;
-}
+} */
 
 .card {
     border-radius:10px !important;
@@ -182,7 +187,7 @@ body {
 .zoom:hover {
     box-shadow: inset 0px 0px 10px 10px rgba(250,250,250,0.8);
     /* filter: drop-shadow(0px 0px 5px 5px rgba(200,200,200,.7)) !important; */
-    transform: scale(1.3) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+    transform: scale(1.1) !important; /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
     z-index:1000 !important;
 }
 
@@ -401,7 +406,7 @@ input.member_search{
     /* -webkit-border-radius: 5px !important; */
     /* -moz-border-radius: 5px !important; */
     opacity:.4 !important;
-    border-radius: 10px !important;
+    border-radius: 12px !important;
 }
 
 /* .segment {
@@ -422,7 +427,7 @@ input.member_search{
     font-size: 110% !important;
 
     background-color: rgba(250,250,250,1) !important;
-    border-radius: 10px !important;
+    border-radius: 15px !important;
     border: solid !important;
     border-width: 1px !important;
     border-color: lightgrey !important;
@@ -431,7 +436,7 @@ input.member_search{
 
 .button.active {
     /* background-color: rgba(150, 150, 150, 1) !important; */
-    background-color: teal !important;
+    background-color: #110264 !important;
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
     /* background-color: rgba(50, 50, 50, .9) !important; */
     color: white !important;
@@ -622,8 +627,8 @@ h1.ui.header{
     max-width: 100% !important;
 	overflow-y:hidden;
 	overflow-x:scroll;
-    margin-left: .3em !important;
-    margin-right: .3em !important;
+    /* margin-left: .3em !important;
+    margin-right: .3em !important; */
 }
 
 /* .button {
@@ -867,6 +872,17 @@ h1.ui.header{
 	/*padding-left: 1em;*/
 }
 
+.menuscroll{
+	overflow-y:scroll;
+	overflow-x:hidden;
+	/* max-height:500px; */
+	max-height:100vh;
+    z-index: 1000 !important;
+	/* padding-top: -1em !important;
+	margin-top: -1em !important; */
+	/*padding-left: 1em;*/
+}
+
 
 .card {
     opacity: .9 !important;
@@ -881,25 +897,28 @@ h1.ui.header{
 .mediumscroll::-webkit-scrollbar {
     display: none;
 }
+.menuscroll::-webkit-scrollbar {
+    width: 5px;
+}
 /*
 .smallscroll::-webkit-scrollbar {
     display: none;
 } */
 
-.topnav{
+/* .topnav{
 	overflow-y:hidden;
 	overflow-x:scroll;
 	/*max-height:1000px;*/
 	/*max-height:85vh;*/
-    transition: background-color 3s; /* Animation */
-    transition: height 1s; /* Animation */
+    /* transition: background-color 3s; /* Animation */
+    /* transition: height 1s; /* Animation */ */
     /* box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important; */
 
-    background-color: (250,250,250,.1) !important;
+    /* background-color: (250,250,250,.1) !important; */
 	/* padding: 1em; */
-    -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,.8)));
-    mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0));
-}
+    /* -webkit-mask-image:-webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,.8))); */
+    /* mask-image: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0)); */ */
+/* } */
 
 .topnav::-webkit-scrollbar {
     display: none;
