combine new reservation to edit_reservation, much more res daily/hourly logic, beginning time calculation, need options with money feedback, remove kiosk rental templates,

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -89,7 +89,8 @@ template(name='user_list_info')
 
 template(name='call_watson')
     .ui.button.autotag
-        i.chess.icon
+        //- i.chess.icon
+        +ismall name='dna-helix'
         |call watson
 
 template(name='view_full_button')
