--- a/components/admin/admin.jade
+++ b/components/admin/admin.jade
@@ -22,7 +22,7 @@ template(name='admin')
             .column
                 +karma_transactions_small
             .column
-                +rental_small
+                //- +rental_small
             .column
                 +admin_tasks
             .column
