--- a/components/commerce/shop.jade
+++ b/components/commerce/shop.jade
@@ -30,7 +30,7 @@ template(name='shop_dashboard')
         .three.wide.column
             .ui.header 
                 +i name='shop'
-                |shop (beta)
+                |shop
         //-     .ui.fluid.button.add_item
                 i.plus.icon
         //-         |add item
