--- a/client/grid.jade
+++ b/client/grid.jade
@@ -20,7 +20,7 @@ template(name='grid')
                 
 template(name='grid_role_model')
     .ui.segment
-        a.ui.inline.header(href="/m/#{slug}" tabindex="0" title=description)
+        a.ui.inline.capitalize.header(href="/m/#{slug}" tabindex="0" title=description)
             +i name=icon
             //- i.icon(class=icon)
             |#{title}
@@ -43,10 +43,11 @@ template(name='grid_role_model')
 
 template(name='model_list_item_view')
     //- a.item(href="/m/#{model}/#{_id}/view") 
-    .item.pointer.goto_doc
+    .item.pointer.goto_doc(title="#{views} views")
         if image
             img.ui.mini.inline.image(src="{{c.url image width=400 height=400 gravity='face' crop='fill'}}")
         if icon
             +ismall name=icon
-        |#{title} #{name}
+        span.capitalize #{title} #{name}
+        //- span.lowercase #{title} #{name}
         div
