--- a/client/styles.css
+++ b/client/styles.css
@@ -34,6 +34,13 @@ body {
 .vertical-text {
  writing-mode: vertical-rl;
 }
+.lowercase {
+    text-transform: lowercase !important;
+}
+
+.capitalize {
+    text-transform: capitalize !important;
+}
 
 .italic {
     font-style: italic !important;
