--- a/components/rentals/rental.jade
+++ b/components/rentals/rental.jade
@@ -27,154 +27,6 @@ template(name='set_market_type')
             +ismall name=icon
         |#{label}
 
-template(name='rental_kiosk_card')
-    .ui.card
-        a.image.zoom.log_view(href="/kiosk_rental_view/#{_id}")
-            img.ui.image(src="{{c.url image width=200 height=200 crop='lpad'}}")
-
-        //- +image_view key='image' direct=true classes='zoom'
-        .content
-            a.ui.header.log_view(href="/kiosk_rental_view/#{_id}") #{title} 
-                if variable_price
-                    |~
-                .ui.basic.large.label $#{hourly_rate}/hr
-                .ui.basic.large.label $#{daily_rate}/day
-            //- a.ui.button.log_view(href="/kiosk_rental_view/#{_id}")
-            //-     |view
-            //-     i.right.chevron.yellow.icon
-
-
-
-
-
-template(name='rental_kiosk_segment')
-    .ui.fluid.segment.grid
-        .row
-            .sixteen.wide.column
-                a.ui.inline.header(href="/kiosk_rental_view/#{_id}") #{title} 
-                    if variable_price
-                        |~
-                    .ui.basic.label $#{hourly_rate}/hr
-                    .ui.basic.label $#{daily_rate}/day
-        .row
-            .four.wide.column
-                a.zoom(href="/kiosk_rental_view/#{_id}")
-                    if image
-                        +image_view key='image' direct=true classes='zoom'
-                    //- if picture
-                    //-     +image_view key='picture' direct=true classes='zoom'
-            .twelve.wide.column
-                div
-                //- .ui.grey.inline.header location
-                //- each location_tags
-                //-     .ui.basic.label #{this}
-                //- div
-                //- .ui.grey.inline.header tags
-                //- each tags
-                //-     .ui.basic.label #{this}
-                //- +single_user_view key='resident' label='resident' direct=true
-                //- div
-                //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
-    
-                //- +voting
-                div
-                //- if currentUser
-                //-     if can_edit
-                //-         a.ui.button(href="/rental/#{_id}/edit/info")
-                //-             i.pencil.blue.icon
-                //-             |edit
-                a.ui.large.button(href="/kiosk_rental_view/#{_id}")
-                    |view
-                    i.right.chevron.yellow.icon
-                //- +author_info
-
-
-
-
-
-template(name='rental_view')
-    with current_doc
-        .ui.stackable.padded.grid
-            .row
-                .four.wide.column 
-                    a.ui.fluid.button(href="/m/rental")
-                        i.left.chevron.icon
-                        |rentals
-                    .ui.header viewing rental
-                    if can_edit
-                        a.ui.fluid.button(href="/rental/#{_id}/edit")
-                            i.pencil.icon
-                            |edit
-                    +image_view key='image' label='image' direct=true
-                    +image_view key='picture' label='image' classes='zoom' direct=true
-                    +voting_full
-                    +viewing
-                    +comments
-                .eight.wide.column
-                    h1.ui.header #{title} 
-                    +textarea_view key='description' icon='content' label='description' direct=true
-                    +array_view key='location_tags' label='location tags' icon='marker' direct=true
-                    +array_view key='tags' label='tags' icon='tags' direct=true
-                    +single_user_view key='resident' label='resident' direct=true
-                    +text_view key='contact_info' label='contact info' icon='info' direct=true
-                    +rental_transactions
-                    +rental_reservations
-                .four.wide.column 
-                    +boolean_view key='set_duration' label='set duration' direct=true
-                    if set_duration
-                        +number_view key='duration_hours' label='duration hours' direct=true
-                    +number_view key='hourly_rate' label='hourly rate' direct=true
-                    +boolean_view key='variable_price' label='variable price' direct=true
-                    div
-                    +rental_status
-                    +rental_finance
-                    +rental_stats
-                    //- +rental
-                    //- +rental_history
-                    //- +rental_subscription
-                    //- +rental_time
-
-
-template(name='rental_finance')
-    .ui.inline.header 
-        i.money.grey.icon
-        |rental finance
-    i.circular.link.refresh.icon.refresh_rental_finance_stats
-    .ui.small.header total earnings
-    .ui.small.header upcoming earnings
-    .ui.small.header initial cost
-    .ui.small.header maintenance costs/payments
-
-
-template(name='rental_stats')
-    div
-    .ui.inline.header 
-        i.line.chart.grey.icon
-        |rental stats
-    i.circular.link.refresh.icon.refresh_rental_finance_stats
-    .ui.small.header total earnings
-    .ui.small.header rental ranking #reservations
-    .ui.small.header rental ranking $ earned
-    .ui.small.header # different renters
-    .ui.small.header avg rental time
-    .ui.small.header avg daily earnings
-    .ui.small.header avg weekly earnings
-    .ui.small.header avg monthly earnings
-    .ui.small.header biggest renter
-    .ui.small.header predicted payback duration 
-    .ui.small.header predicted payback date 
-    
-
-
-
-template(name='rental_status')
-    div
-    .ui.inline.header status
-    if available 
-        .ui.green.label available
-        div
-        .ui.big.green.fluid.button.new_reservation reserve/rent 
-
 
 template(name='rental_card_template')
     .ui.fluid.segment.grid
@@ -188,42 +40,47 @@ template(name='rental_card_template')
                         .ui.basic.label $#{hourly_dollars}/hr
                     if daily_dollars
                         .ui.basic.label $#{daily_dollars}/day
-                    if hourly_karma
-                        .ui.basic.blue.label $#{hourly_karma}/day
-                    if daily_karma
-                        .ui.basic.blue.label $#{daily_karma}/day
+                if hourly_karma
+                    +ismall name='yin-yang'
+                    |#{hourly_karma}/hr
+                if daily_karma
+                    +ismall name='yin-yang'
+                    | #{daily_karma}/day
+                +rental_status
         .row
             .four.wide.column
                 //- a.zoom(href="/kiosk_rental_view/#{_id}")
-                a.zoom(href="/rental/#{_id}/view")
-                    if image
+                if image
+                    a.zoom(href="/rental/#{_id}/view")
                         +image_view key='image' direct=true classes='zoom'
-                    //- if picture
-                    //-     +image_view key='picture' direct=true classes='zoom'
             .twelve.wide.column
+                span(title='views')
+                    +ismall name='eye'
+                    |#{views}
                 div
-                .ui.grey.inline.header location
+                +ismall name='marker'
                 each location_tags
                     .ui.basic.label #{this}
                 div
-                .ui.grey.inline.header tags
+                +ismall name='tags'
                 each tags
                     .ui.basic.label #{this}
                 +single_user_view key='resident' label='resident' direct=true
-                //- div
-                //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
+                div
+                +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
                 +voting
                 div
                 if currentUser
                     if can_edit
                         a.ui.button(href="/rental/#{_id}/edit/info")
-                            i.pencil.blue.icon
+                            i.pencil.icon
                             |edit
                 //- a.ui.button(href="/kiosk_rental_view/#{_id}")
                 a.ui.button(href="/rental/#{_id}/view")
                     |view
-                    i.right.chevron.yellow.icon
+                    i.right.chevron.icon
                 +author_info
+                +reserve_button
 
 
 template(name='rental_cloud')
@@ -249,7 +106,7 @@ template(name='rental_cloud')
 
 
 
-template(name='rental_cal')
+template(name='rental_view_calendar')
     .ui.header 
         //- i.clock.icon
         +i name='clock'
@@ -405,7 +262,7 @@ template(name='rental')
 //- 
 
 
-template(name='rental_transactions')
+template(name='rental_view_transactions')
     .ui.grey.header 
         +i name='refund-2'
         |transactions
@@ -413,11 +270,21 @@ template(name='rental_transactions')
         a.ui.header(href="/transaction/#{_id}/view") #{when} by #{_author_username}
         
         
-template(name='rental_reservations')
+template(name='rental_view_reservations')
     .ui.grey.header 
         //- i.clock.icon
         +i name='clock'
         |reservations
     .ui.bulleted.link.list
         each reservations
-            a.item(href="/reservation/#{_id}/view") #{when} by #{_author_username}
+            +reservation_list_item
+
+
+
+template(name='reservation_list_item')
+    .ui.segment
+        a.item(href="/reservation/#{_id}/view") #{when} by #{_author_username}
+        .ui.header #{hour_duration} hours
+        if submitted 
+            .ui.basic.green.label #{submitted}
+        
