--- a/components/rentals/rental_edit.jade
+++ b/components/rentals/rental_edit.jade
@@ -7,45 +7,45 @@ template(name='rental_edit_layout')
                     .ui.header 
                         i.pencil.icon
                         |rental edit
-                    a.ui.big.fluid.button(href="/rental_kiosk_view/#{_id}" title='save')
+                    a.ui.big.fluid.button(href="/rental/#{_id}/view" title='save')
                         i.checkmark.large.green.icon
                         |save
                     +remove_button
                     div
-                    a.ui.button(href="/rental/#{_id}/edit/info" class="{{isActiveRoute 'rental_edit_info'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/info" class="{{isActiveRoute 'rental_edit_info'}}")
                         +ismall name='info'
                         |info
                         //- i.info.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/finance" class="{{isActiveRoute 'rental_edit_finance'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/finance" class="{{isActiveRoute 'rental_edit_finance'}}")
                         +ismall name='money'
                         |finance
                         //- i.money.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/availability" class="{{isActiveRoute 'rental_edit_availability'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/availability" class="{{isActiveRoute 'rental_edit_availability'}}")
                         +ismall name='clock'
                         |availability
                         //- i.clock.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/audience" class="{{isActiveRoute 'rental_edit_audience'}}") 
+                    a.ui.compact.button(href="/rental/#{_id}/edit/audience" class="{{isActiveRoute 'rental_edit_audience'}}") 
                         +ismall name='groups'
                         |audience
                         //- i.users.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/chat" class="{{isActiveRoute 'rental_edit_chat'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/chat" class="{{isActiveRoute 'rental_edit_chat'}}")
                         +ismall name='chat'
                         |chat
                         //- i.chat.outline.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/tasks" class="{{isActiveRoute 'rental_edit_tasks'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/tasks" class="{{isActiveRoute 'rental_edit_tasks'}}")
                         +ismall name='tasks'           
                         |tasks         
                         //- i.tasks.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/ownership" class="{{isActiveRoute 'rental_edit_ownership'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/ownership" class="{{isActiveRoute 'rental_edit_ownership'}}")
                         +ismall name='pie-chart'           
                         |ownership
                         //- i.pie.chart.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/stats" class="{{isActiveRoute 'rental_edit_stats'}}")
+                    a.ui.compact.button(href="/rental/#{_id}/edit/stats" class="{{isActiveRoute 'rental_edit_stats'}}")
                         +ismall name='line-chart'
                         |stats
                         //- i.line.chart.grey.icon
-                    a.ui.button(href="/rental/#{_id}/edit/ads" class="{{isActiveRoute 'rental_edit_ads'}}")
-                        +ismall name='bullhorn'
+                    a.ui.compact.button(href="/rental/#{_id}/edit/ads" class="{{isActiveRoute 'rental_edit_ads'}}")
+                        +ismall name='open-in-window'
                         |ads
                         //- i.bullhorn.grey.icon
                 .twelve.wide.column 
@@ -71,25 +71,37 @@ template(name='rental_edit_info')
 
 
 template(name='rental_edit_finance')  
-    h1.ui.header 
-        i.money.grey.icon
+    .ui.large.header 
+        +i name='money'
+        //- i.money.grey.icon
         |finance
-    +number_edit key='hourly_rate' label='hourly rate' direct=true
-    +number_edit key='daily_rate' label='daily rate' direct=true
+    .ui.stackable.grid
+        .two.column.row
+            .column
+                +number_edit key='hourly_dollars' label='hourly rate ($)' icon='money' direct=true
+                +number_edit key='daily_dollars' label='daily rate ($)' icon='money' direct=true
+            .column
+                +number_edit key='hourly_karma' label='hourly rate (karma)' icon='yin-yang' direct=true
+                +number_edit key='daily_karma' label='daily rate (karma)' icon='yin-yang' direct=true
     div
-    +boolean_edit key='variable_price' label='variable price' direct=true tooltip='allow system to increase/decrease price based on performance and popularity'
+    +boolean_edit key='variable_price' label='variable price' icon='change' direct=true tooltip='allow system to increase/decrease price based on performance and popularity'
+    if variable_price
+        +number_edit key='min_variable_price' label='minimum variable price' icon='online-request' tooltip='baseline price' direct=true
     div
-    +boolean_edit key='negotiable_price' label='negotiable price' tooltip='allow people to make bids' direct=true
+    +boolean_edit key='negotiable_price' label='negotiable price' icon='collaboration' tooltip='allow people to make bids' direct=true
     div
-    +number_edit key='retail_value' label='original retail value' tooltip='general info, helpful to renters to decide, also for price recommendations, and sorting' direct=true
+    +number_edit key='retail_value' label='original retail value' icon='estimate' tooltip='general info, helpful to renters to decide, also for price recommendations, and sorting' direct=true
     .ui.header 
-        |pricing
-    +boolean_edit key='cash_accepted' label='cash accepted' direct=true
-    +boolean_edit key='prepay' label='prepayment required' direct=true
-    +boolean_edit key='security_deposit_required' label='security deposit required' direct=true
+        +i name='online-payment-'
+        |payment options
+    +boolean_edit key='cash_accepted' label='cash accepted' icon='cash' direct=true
+    +boolean_edit key='venmo_accepted' label='venmo accepted' icon='venmo' direct=true
+    +boolean_edit key='prepay' label='prepayment required' icon='pay-wall' direct=true
+    +boolean_edit key='security_deposit_required' label='security deposit required' icon='card-security' direct=true
     if security_deposit_required
-        +number_edit key='security_deposit_amount' label='security deposit amount' icon='dollar' direct=true
-    +boolean_edit key='friend_discount' label='friend discount' direct=true
+        +number_edit key='security_deposit_amount' label='security deposit amount' icon='card-security' direct=true
+    div
+    +boolean_edit key='friend_discount' label='friend discount' icon='friends--v2' direct=true
     if friend_discount
         +number_edit key='friend_discount_amount' label='security deposit amount' icon='dollar' direct=true
 
