--- a/client/styles.css
+++ b/client/styles.css
@@ -569,8 +569,8 @@ input.member_search{
 }
 
 .ui.header{
-    font-family: 'Raleway', sans-serif !important;
-    /* font-family: 'Ubuntu', sans-serif !important; */
+    /* font-family: 'Raleway', sans-serif !important; */
+    font-family: 'Ubuntu', sans-serif !important;
 }
 h1.ui.header{
     /* font-family: 'Ubuntu', sans-serif !important; */
